Feature ET-27: Start Retained Platform HTTP Composition